force-app/main/default/objects/Question__c/fields/Allow_Skip__c.field-meta.xml
<CustomField>
    <fullName>Allow_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Skip</label>
    <type>Checkbox</type>
</CustomField>