force-app/main/default/objects/Question__c/fields/Bypass_Value__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override value with &apos;X&apos; on Answer_Flow__c</description>
    <label>Bypass Value</label>
    <type>Checkbox</type>
</CustomField>