force-app/main/default/objects/Question__c/fields/Choice_Layout__c.field-meta.xml
<CustomField>
    <fullName>Choice_Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choice Layout</label>
    <referenceTo>Choice_Layout__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>