force-app/main/default/objects/Question__c/fields/First_Question__c.field-meta.xml
<CustomField>
    <fullName>First_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Question</label>
    <type>Checkbox</type>
</CustomField>