force-app/main/default/objects/Question__c/fields/IsInput__c.field-meta.xml
<CustomField>
    <fullName>IsInput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Input</label>
    <type>Checkbox</type>
</CustomField>