force-app/main/default/objects/Question__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <label>QuestionType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ข้อมูลส่วนตัว</fullName>
            </value>
            <value>
                <fullName>ข้อมูลรายได้</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>