force-app/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Choice_Layout__c</columns>
    <columns>First_Question__c</columns>
    <columns>Dependent__c</columns>
    <columns>IsInput__c</columns>
    <columns>Project__c</columns>
    <columns>Version__c</columns>
    <columns>Bypass_Value__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>